2006-02-23  Richard Guenther  <rguenther@suse.de>

	PR middle-end/26439
	* tree-ssa-structalias.c (find_func_aliases): Handle complex types
	like aggregate types.

2006-02-23  Jakub Jelinek  <jakub@redhat.com>

	* configure.ac: Add --with{,out}-long-double-128 configure option.
	(TARGET_DEFAULT_LONG_DOUBLE_128): New test.
	* configure: Rebuilt.
	* config.in: Rebuilt.
	* doc/install.texi (Options specification): Document
	--with-long-double-128.

	* config/rs6000/linux.h [TARGET_DEFAULT_LONG_DOUBLE_128]
	(RS6000_DEFAULT_LONG_DOUBLE_SIZE): Define to 128.
	* config/rs6000/linux64.h [TARGET_DEFAULT_LONG_DOUBLE_128]
	(RS6000_DEFAULT_LONG_DOUBLE_SIZE): Define to 128.

2006-02-23  Aldy Hernandez  <aldyh@redhat.com>

	* config/s390/s390.c (override_options): Handle
	TARGET_DEFAULT_LONG_DOUBLE_128.

	* config/alpha/alpha.c (override_options): Handle
	TARGET_DEFAULT_LONG_DOUBLE_128.

	* config/sparc/sparc.c (sparc_override_options): Handle
	TARGET_DEFAULT_LONG_DOUBLE_128.

2006-02-22  Daniel Jacobowitz  <dan@codesourcery.com>

	* Makefile.in (stmp-fixinc): Use real-$(INSTALL_HEADERS_DIR).
	(real-install-headers-tar, real-install-headers-cpio)
	(real-install-headers-cp): New targets.

2006-02-22  Richard Sandiford  <richard@codesourcery.com>

	* tree.h (variable_section): Delete.
	* varasm.c (variable_section): Delete.

2006-02-22  Paolo Bonzini  <bonzini@gnu.org>

	* install.texi: Add notes on install.texi2html.
	(Building in parallel): Do not use footnotes.

2006-02-21  Aldy Hernandez  <aldyh@redhat.com>

	PR libgomp/26234
	* doc/install.texi (Configuration): Document --disable-libgomp.

2006-02-21  Geoffrey Keating  <geoffk@apple.com>

	* config/i386/darwin.h (DWARF2_FRAME_REG_OUT): New.

2006-02-21  Alexandre Oliva  <aoliva@redhat.com>

	* config/i386/sse.md (vec_extractv2df_1_sse): New.
	(vec_extractv2df_0_sse): New.

2006-02-21  Alexandre Oliva  <aoliva@redhat.com>

	* defaults.h (CFA_FRAME_BASE_OFFSET): Define.
	* config/ia64/ia64.h (CFA_FRAME_BASE_OFFSET): Override.