@@ -1,3 +1,8 @@
+2006-02-23  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/26412
+	* gcc.dg/gomp/pr26412.c: New test.
+
 2006-02-22  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
 
 	PR c++/26291
