@@ -1,3 +1,9 @@
+2006-02-23  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/26412
+	* gimplify.c (omp_add_variable): Guard variable size decl test with
+	DECL_SIZE (decl) check.
+
 2006-02-23  Richard Guenther  <rguenther@suse.de>
 
 	PR middle-end/26439
